syntax = "proto3";

option csharp_namespace = "Fibo.Grpc";

service WeatherFiboService {
  rpc GetWeatherAndFibonacci (WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
  string city = 1;
}

message WeatherResponse {
  string city = 1;
  double temperature = 2;
  repeated int32 fibonacciNumbers = 3;
}
